# vultro_experiment

./: Cargo.toml  DEVNOTES.md  FUN_WAY_TO_WRITE_SHADERS.md  TODO.md
.cargo/: config.toml
.zed/: settings.json
src/: buffer.rs  floater.rs  main.rs  texture.rs  vram.rs
src/gpucmd/: alpha.rs  chain.rs  color_operation.rs  cull_face.rs  depth_color_mask.rs  depth_map.rs  fixed_attrib.rs  geostage_config.rs  logic_op.rs  misc.rs  mod.rs  primitive.rs  shader_outmap.rs  texenv.rs  transfer.rs
src/queue/: mod.rs
src/renderbuffer/: mod.rs
src/shader/: dvle.rs  dvlp.rs  mod.rs
src/shader_unfun/: dvlb.rs  dvle.rs  dvlp.rs
