[package]
name = "vultro_experiment"
version = "0.1.0"
edition = "2024"

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs" }
bytemuck = { version = "1.21.0", features = ["derive"] }
swizzle_3ds = "0.2.0"
derive_more = { version = "1.0.0", features = ["from"] }
tuple_swizzle = "1.0.1"
nohash = "0.2.0"

[profile.dev]
opt-level = 3
lto="thin"
